news url change HTML

--- a/web/ts1.html
+++ b/web/ts1.html
@@ -110,7 +110,7 @@
             }
           }
         };
-        xhttp.open("GET", "http://139.199.32.181:8080/talk/dreamclient?name=tom", true);
+        xhttp.open("GET", "http://139.199.32.181:8080/talk/news", true);
         xhttp.send();   
     }
 
