--- a/web/ts1.html
+++ b/web/ts1.html
@@ -18,8 +18,8 @@
     </style>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
-<body style="background-color: black;">
-<div class="container" style="margin-top: 90px; margin-left:110px; margin-right:110px;margin-bottom: 35px; max-height: 780px;background-color: black; height: 780px;">
+<body style="background-color: black; overflow: hidden;">
+<div class="container" style="margin-top: 90px; margin-left:110px; margin-right:110px; margin-bottom: 35px; max-height: 730px;background-color: black; height: 730px;">
     <!-- <div class="row">
     <div class="col align-self-center">
         <image class="MainImage" style="display: block; height: 100%;" id="MainImg1" src="http://139.199.32.181:9002/talk/img/story/s1.jpg"></image>
@@ -30,7 +30,7 @@
    
 </div>
 
-<div class="container">
+<div class="container-fluid" style="width: 85%;">
     <h1 id="storytext" style="text-align: center; color: white;font-size: 50px;line-height: 1;">scene: the inauguration of trump</h1>
     <h1 id="chinesestory" style="text-align: center; color: white; font-family: ChineseFont;font-size: 45px;line-height: 2;">特朗普宣誓的场景</h1>
     <audio src="" autoplay="" id="teller"></audio>
@@ -141,6 +141,7 @@
 
     function ImageReposition(imageinfo) {
 
+        ImageFrameHeight = 730;
         var img = document.getElementById('MainImg1');
         img.src = imageinfo.thumbnailUrl;
         //img.src = 'https://tse2.mm.bing.net/th?id=OIP.WgaQqMxxicDuNPbPKzfakgAAAA&pid=Api';
@@ -149,14 +150,14 @@
         width = imageinfo.thumbnail.width;
 
         // Clip height
-        new_size = ClipSize(height, width, 780);
+        new_size = ClipSize(height, width, ImageFrameHeight);
         height = new_size.height;
         width = new_size.width;
         //height = 150;
         //width = 135;
         console.log('Width, height,', width, height);
         mleft = (1700 - width) / 2;
-        mtop = (780 - height) / 2;
+        mtop = (ImageFrameHeight - height) / 2;
 
         console.log(img);
         img.style.marginLeft = mleft.toString() + "px";
