--- a/web/ts1.html
+++ b/web/ts1.html
@@ -6,7 +6,7 @@
     <style>
         *{margin:0;padding:0;}
         html,body{line-height:1.3em; font-family: 'Helvetica', 'Arial', sans-serif; background-color: #000;height:100%;width:100%;}
-        .wrap-container {position: absolute; top:0;right:0;bottom:0;left:0;margin:90px 110px 300px;display: block;overflow: hidden;}
+        .wrap-container {position: absolute; top:0;right:0;bottom:0;left:0;margin:40px 110px 300px;display: block;overflow: hidden;}
         .wrap-container img{margin:0 auto;}
         .wrap-container .image-container{overflow:hidden;display: inherit}
         .text-container {position: absolute;left:0;right:0; margin:15px 110px;display:none; z-index:999;text-align: center; max-height:105px;line-height: 35px;}
@@ -32,7 +32,7 @@
 
 <div class="container-fluid" style="width: 85%;">
     <h1 id="storytext" style="text-align: center; color: white;font-size: 50px;line-height: 1;">scene: the inauguration of trump</h1>
-    <h1 id="chinesestory" style="text-align: center; color: white; font-family: ChineseFont;font-size: 45px;line-height: 2;">特朗普宣誓的场景</h1>
+    <h1 id="chinesestory" style="text-align: center; color: white; font-family: ChineseFont;font-size: 45px;line-height: 1.2em;">特朗普宣誓的场景</h1>
     <audio src="" autoplay="" id="teller"></audio>
 </div>
 <script>
