--- a/web/ts1.html
+++ b/web/ts1.html
@@ -36,11 +36,9 @@
     <audio src="" autoplay="" id="teller"></audio>
 </div>
 <script>
-    var bodyText = ["The smaller your reality, the more convinced you are that you know everything.", "If the facts don't fit the theory, change the facts.", "The past has no power over the present moment.", "This, too, will pass.", "</p><p>You will not be punished for your anger, you will be punished by your anger.", "Peace comes from within. Do not seek it without.", "<h3>Heading</h3><p>The most important moment of your life is now. The most important person in your life is the one you are with now, and the most important activity in your life is the one you are involved with now."]
-    function generateText(sentenceCount) {
-        for (var i = 0; i < sentenceCount; i++)
-            document.write(bodyText[Math.floor(Math.random() * 7)] + " ")
-    }
+    var debug = false;
+    var lastText = "";
+    
     rep = 0;
 
     function readcaption() {
@@ -66,7 +64,9 @@
          return teller;
     }
     function ReadDream() {
-        console.log('[AJAX]Start dreaming ...')
+        if (debug) {
+            console.log('[AJAX]Start dreaming ...')
+        }
         var xhttp = new XMLHttpRequest();
         xhttp.onreadystatechange = function() {
           if (this.readyState == 4 && this.status == 200) {
@@ -100,12 +100,13 @@
 
             // Speech
             var speechpath = dreamJson.speechpath;
-            console.log('Speech path:' + speechpath);
+            if (debug) {
+                console.log('Speech path:' + speechpath);
+            }
             //speechpath = 'http://139.199.32.181:9002/v2//9b87d5507c65ace5b01c4243fee3f8f93f40ce2b57bd18f4716fd499bc063070.mp3'
             var speech = PlaySpeech(speechpath);
             //window.setTimeout(readcaption, 6000);
             speech.onended = function () {
-                console.log('Audio ended.')
                 window.setTimeout(readcaption, 1000);
             }
           }
@@ -155,17 +156,29 @@
         width = new_size.width;
         //height = 150;
         //width = 135;
-        console.log('Width, height,', width, height);
+        if (debug) {
+            console.log('Width, height,', width, height);
+        }
         mleft = (1700 - width) / 2;
         mtop = (ImageFrameHeight - height) / 2;
 
-        console.log(img);
         img.style.marginLeft = mleft.toString() + "px";
         img.style.marginTop = mtop.toString() + "px";
         img.style.height = height.toString() + "px";
     }
 
+    function RefreshGuard() {
+        var story_text = document.getElementById('storytext').innerHTML;
+        if (story_text === lastText) {
+            console.log('[Error] Page freezed, reloading...');
+            location.reload(true);
+        } else {
+            lastText = story_text;
+        }
+        window.setTimeout(RefreshGuard, 30000);
+    }
     window.setTimeout(readcaption, 100);
+    window.setTimeout(RefreshGuard, 110);
 </script>
 </body>
 </html>
