client font-family: helvetica

--- a/web/clientView.html
+++ b/web/clientView.html
@@ -25,7 +25,7 @@
 </div>
 
 <div class="container">
-    <h1 id="storytext" style="text-align: center; color: white;font-size: 50px;line-height: 1;">scene: the inauguration of trump</h1>
+    <h1 id="storytext" style="text-align: center; color: white;font-size: 50px;line-height: 1;font-family: helvetica;">scene: the inauguration of trump</h1>
     <h1 id="chinesestory" style="text-align: center; color: white; font-family: ChineseFont;font-size: 45px;line-height: 2;">特朗普宣誓的场景</h1>
     <audio src="" autoplay="" id="teller"></audio>
 </div>
