--- a/web/laptop-news-button.html
+++ b/web/laptop-news-button.html
@@ -19,23 +19,20 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
 <body style="background-color: black;">
-<div style="text-align: center">
-    <b style="color:white"> *Please click on the center of the page and hit refresh if it doesn't play.</b>
-</div>
-<div class="container" id = "ImageContainer" style="margin-top: 90px; margin-bottom: 35px; max-height: 500px;background-color: black; height: 500px;">
+<div class="container" id = "image-container" style="display:none;margin-top: 40px; margin-bottom: 20px; max-height: 500px;background-color: black; height: 500px;">
     <image class="MainImage" style="display: block; min-height: 100px; position: absolute;" id="MainImg1" src=""></image>
    
 </div>
 
-<div style="margin-left: auto;margin-right: auto;width:80px;">
+<div style="margin-left: auto;margin-right: auto;width:80px;margin-top:200px;">
     <button class="btn btn-success" style="border: green 1px solid;border-width: 6px;
     width: 150px;" onclick="readcaption()" id="main-btn">
         Start Play
     </button>
 </div>
-<div class="container">
-    <h1 id="storytext" style="text-align: center; color: white;font-size: 50px;line-height: 1;font-family: helvetica;">scene: the inauguration of trump</h1>
-    <h1 id="chinesestory" style="text-align: center; color: white; font-family: ChineseFont;font-size: 45px;line-height: 2;">特朗普宣誓的场景</h1>
+<div class="container" id = "storytext-container" style="display: none;">
+    <h1 id="storytext" style="text-align: center; color: white;font-size: 35px;line-height: 1;font-family: helvetica;">scene: the inauguration of trump</h1>
+    <h1 id="chinesestory" style="text-align: center; color: white; font-family: ChineseFont;font-size: 35px;line-height: 2;">特朗普宣誓的场景</h1>
     <audio src="" autoplay="" id="teller"></audio>
 </div>
 <script>
@@ -51,6 +48,8 @@
         
         var button = document.getElementById('main-btn');
         button.style.display = 'none';
+        document.getElementById('image-container').style.display = 'block';
+        document.getElementById('storytext-container').style.display = 'block';
         //ad.play();
         // Change Image
         //document.getElementById('storytext').innerHTML = '';
@@ -167,7 +166,7 @@
             || document.body.clientWidth;
         console.log('Browser window width', WindowWidth);
         console.log('Browser body width', document.body.clientWidth);*/
-        var WindowWidth = document.getElementById('ImageContainer').clientWidth;
+        var WindowWidth = document.getElementById('image-container').clientWidth;
         console.log('WindowWidth:', WindowWidth);
 
         mleft = (WindowWidth - width) / 2;
