rename frontend folder

--- a/frontend/exhibition-news-button.html
+++ b/frontend/exhibition-news-button.html
@@ -30,7 +30,7 @@
         Start Play
     </button>
 </div>
-<div class="container" id = "storytext-container" style="display: none;">
+<div class="container" id = "storytext-container" style="display: none;max-width:1400px;">
     <h1 id="storytext" style="text-align: center; color: white;font-size: 50px;line-height: 1;font-family: helvetica;">scene: the inauguration of trump</h1>
     <h1 id="chinesestory" style="text-align: center; color: white; font-family: SimHei;font-size: 40px;line-height: 2;">特朗普宣誓的场景</h1>
     <audio src="" autoplay="" id="teller"></audio>
