--- a/v2/index.html
+++ b/v2/index.html
@@ -1,41 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>电子梦：我们将如此继续</title>
     <style>
-        *{margin:0;padding:0;}
-        html,body{line-height:1.3em; font-family: 'Helvetica', 'Arial', sans-serif; background-color: #000;height:100%;width:100%;}
-        .wrap-container {position: absolute; top:0;right:0;bottom:0;left:0;margin:90px 110px 300px;display: block;overflow: hidden;}
-        .wrap-container img{margin:0 auto;}
-        .wrap-container .image-container{overflow:hidden;display: inherit}
-        .text-container {position: absolute;left:0;right:0; margin:15px 110px;display:none; z-index:999;text-align: center; max-height:105px;line-height: 35px;}
-        .text-container h1{font-weight: normal;}
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        html,
+        body {
+            line-height: 1.3em;
+            font-family: 'Helvetica', 'Arial', sans-serif;
+            background-color: #000;
+            height: 100%;
+            width: 100%;
+        }
+
         /*@font-face {
             font-family: ChineseFont;
             src: url(http://139.199.32.181:9002/SourceHanSansCN-Normal.otf);
         }*/
+        body {
+            background: #000;
+        }
+
+        /* #main-btn {
+            cursor: pointer;
+            background: #4CAF50;
+            padding: 15px 40px;
+            text-align: center;
+            border-radius: 40px;
+            color: #fff;
+            font-size: 20px;
+            position: fixed;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            transition: all .3s ease-out;
+            z-index: 5;
+        } */
+        #main-btn{
+            width: 100%;
+            height: 100%;
+            background-image: url('connect.png');
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            position: fixed;
+            z-index: 10;
+            left: 0;
+            top: 0;
+            cursor: pointer;
+        }
+
+        #main-btn:hover {
+            /* box-shadow: 0px 3px 20px rgba(76, 175, 80, 0.7) */
+        }
+
+        .main-wrapper {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            width: 100vw;
+            /*opacity: 0;*/
+        }
+
+        .main-wrapper-body {
+            width: 100%;
+            height: 80%;
+            position: relative;
+            padding: 20px 0;
+        }
+
+        .main-wrapper-body img {
+            position: absolute;
+            max-width: 100%;
+            max-height: 100%;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 2;
+        }
+
+        .main-wrapper-footer {
+            height: 20%;
+            color: #fff;
+            text-align: center;
+            padding: 0 20px;
+        }
+
+        .main-wrapper-footer h1 {
+            line-height: 1.5;
+            font-weight: 500;
+            font-size: 30px;
+        }
     </style>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 </head>
-<body style="background-color: black;">
-<div class="container" id = "image-container" style="display:none;margin-top: 200px; margin-bottom: 100px; max-height: 500px;background-color: black; height: 500px;">
-    <image class="MainImage" style="display: block; min-height: 100px; position: absolute;" id="MainImg1" src=""></image>
 
-</div>
+<body>
+    <div onclick="readcaption()" id="main-btn"></div>
+    <div class="main-wrapper">
+        <div class="main-wrapper-body" id="image-container">
+            <img src="" id="MainImg1">
+        </div>
+        <div class="main-wrapper-footer" id="storytext-container">
+            <h1 id="storytext"></h1>
+            <h1 id="chinesestory"></h1>
+            <audio src="" preload="auto" x5-video-player-type="h5" webkit-playsinline playsinline autoplay id="teller"></audio>
+        </div>
+    </div>
 
-<div id="main-btn-div" style="margin-left: auto;margin-right: auto;width:80px;margin-top:200px;">
-    <button class="btn btn-success" style="border: green 1px solid;border-width: 6px;
-    width: 150px;" onclick="readcaption()" id="main-btn">
-        Start Play
-    </button>
-</div>
-<div class="container" id = "storytext-container" style="display: none;max-width:1400px;">
-    <h1 id="storytext" style="text-align: center; color: white;font-size: 50px;line-height: 1;font-family: helvetica;">scene: the inauguration of trump</h1>
-    <h1 id="chinesestory" style="text-align: center; color: white; font-family: SimHei;font-size: 40px;line-height: 2;">特朗普宣誓的场景</h1>
-    <audio src="" autoplay="" id="teller"></audio>
-</div>
-<script src="d3.v5.min.js"></script>
-<script src="control.js"></script>
+
+
+
+    <script src="d3.v5.min.js"></script>
+    <script src="control.js"></script>
+    <script type="text/javascript">
+        // readcaption()
+    </script>
 </body>
+
 </html>
